--- a/pages/past_work.html
+++ b/pages/past_work.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Willem Swanepoel Portfolio</title>
-        <link rel="stylesheet" href="../style.css">
-    </head>
-    <body>
-        <header>
-            <h1 class="title-a">Portfolio</h1>
-            <h6 class="title-b">by Willem Swanepoel</h6>
-        </header>
-        <nav>
-            <ul class="topnav">
-                <li><a href="./contact_me.html">contact me</a></li>
-                <li><a href="./past_work.html">past work</a></li>
-                <li><a href="./about.html">about</a></li>
-                <li><a href="../index.html">home</a></li>
-            </ul>
-        </nav>
-        <h1>Past Coding Experience</h1>
-        <article class="experience">
-          <h2>Angular Developer</h2>
-          <h4>Saphi, Newcastle</h4>
-          <ul>
-            <li><a>Worked on a team</a></li>
-            <li><a>Worned on Front End</a></li>
-            <li><a>Used HTML and CSS</a></li>
-            <li><a>Used Javascript</a></li>
-          </ul>
-        </article>
-        <article class="experience">
-          <h2>Coder Academy</h2>
-          <h4>Coder Academy, Sydney</h4>
-          <ul>
-            <li><a>Create and commit to Git Repository</a></li>
-            <li><a>HTML and CSS website production</a></li>
-          </ul>
-        </article>
-
-
-        <footer>
-        </footer>
-    </body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Willem Swanepoel Portfolio</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <header>
+      <h1 class="title-a">Portfolio</h1>
+      <h6 class="title-b">by Willem Swanepoel</h6>
+    </header>
+    <nav>
+      <div class="topnav">
+        <a class="active">Work History</a>
+        <div id="myLinks">
+          <a href="./contact_me.html">contact me</a>
+          <a href="./past_work.html">past work</a>
+          <a href="./about.html">about</a>
+          <a href="../index.html">home</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    </nav>
+    <h1>Past Coding Experience</h1>
+    <article style="margin-top: 50px;">
+      <h2>Angular Developer</h2>
+      <h4>Saphi, Newcastle</h4>
+      <ul>
+        <li><a>Worked on a team</a></li>
+        <li><a>Worned on Front End</a></li>
+        <li><a>Used HTML and CSS</a></li>
+        <li><a>Used Javascript</a></li>
+      </ul>
+    </article>
+    <article style="margin-top: 50px;">
+      <h2>Coder Academy</h2>
+      <h4>Coder Academy, Sydney</h4>
+      <ul>
+        <li><a>Create and commit to Git Repository</a></li>
+        <li><a>HTML and CSS website production</a></li>
+      </ul>
+    </article>
+    <footer>
+    </footer>
+  </body>
 </html>
