Implimented Bootstrap for Dropdown navbar, included google maps embed and started expanding home page. Also general small optimations

--- a/pages/contact_me.html
+++ b/pages/contact_me.html
@@ -1,32 +1,58 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Contanting Willem</title>
-        <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <meta name="discription" content="The Portfolio Webpage of an Aspiring Full-stack Developer">
+      <meta name="author" content="Willem Swan">
+      <meta http-equiv="refresh" content="30">
+      <title>Contanting Willem</title>
+      <link rel="stylesheet" href="../style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+      <!-- jQuery library -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <!-- Popper JS -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <!-- Latest compiled JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <header>
-            <h1 class="title-a">Contact Willem</h1>
-            <h6 class="title-b">by Willem Swanepoel</h6>
-        </header>
-        <nav>
-            <div class="topnav">
-              <a class="active">Work History</a>
-              <div id="myLinks">
-                <a href="./contact_me.html">contact me</a>
-                <a href="./past_work.html">past work</a>
-                <a href="./about.html">about</a>
-                <a href="../index.html">home</a>
-              </div>
-              <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-              </a>
-            </div>
-          </nav>
+      <header class="title">
+        <h1 class="title-a">Portfolio</h1>
+        <h6 class="title-b">by Willem Swanepoel</h6>
+      </header>
+      <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <!-- Brand -->
+        <a class="navbar-brand" href="../index.html">Home</a>
+      
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <h4 class="contact-a">Contact Information;</h4>
-        <h5 class="contact-b">NSW, AU | (+61) 000 000 0000 | email@email.com.au</h5>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+          <div class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./past_work.html">Work History</a>
+            </li>
+            <li>
+              <a class="nav-link" href="./contact_me.html">Contact Me</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+        <div class="contant-info">
+          <div class="map-responsive">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13397.086489132314!2d151.66209498117138!3d-32.91742113287012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b733e66be2b4f4f%3A0x5017d681632ec10!2sElermore%20Vale%20NSW%202287!5e0!3m2!1sen!2sau!4v1634856658034!5m2!1sen!2sau" width="600" height=450 style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+          <h4>Contact Information;</h4>
+          <h5>NSW, AU | (+61) 000 000 0000 | email@email.com.au</h5>
+        </div>
     </body>
 
 </html>            
