--- a/pages/past_work.html
+++ b/pages/past_work.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="discription" content="The Portfolio Webpage of an Aspiring Full-stack Developer">
+    <meta name="author" content="Willem Swan">
+    <meta http-equiv="refresh" content="30">
     <title>Willem Swanepoel Portfolio</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <header>
+    <header class="title">
       <h1 class="title-a">Portfolio</h1>
       <h6 class="title-b">by Willem Swanepoel</h6>
     </header>
-    <nav>
-      <div class="topnav">
-        <a class="active">Work History</a>
-        <div id="myLinks">
-          <a href="./contact_me.html">contact me</a>
-          <a href="./past_work.html">past work</a>
-          <a href="./about.html">about</a>
-          <a href="../index.html">home</a>
-        </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <!-- Brand -->
+      <a class="navbar-brand" href="../index.html">Home</a>
+    
+      <!-- Toggler/collapsibe Button -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Navbar links -->
+      <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <div class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./past_work.html">Work History</a>
+          </li>
+          <li>
+            <a class="nav-link" href="./contact_me.html">Contact Me</a>
+          </li>
+        </ul>
       </div>
     </nav>
     <h1>Past Coding Experience</h1>
