Improvements to Google Map display in Contanct Me page

--- a/pages/contact_me.html
+++ b/pages/contact_me.html
@@ -46,12 +46,14 @@
           </ul>
         </div>
       </nav>
-        <div class="contant-info">
+        <div class="contant-info" style="border-color: yellow;">
           <div class="map-responsive">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13397.086489132314!2d151.66209498117138!3d-32.91742113287012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b733e66be2b4f4f%3A0x5017d681632ec10!2sElermore%20Vale%20NSW%202287!5e0!3m2!1sen!2sau!4v1634856658034!5m2!1sen!2sau" width="600" height=450 style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d26794.11236304732!2d151.6472415817872!3d-32.91762135710198!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b733e66be2b4f4f%3A0x5017d681632ec10!2sElermore%20Vale%20NSW%202287!5e0!3m2!1sen!2sau!4v1634867057132!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
-          <h4>Contact Information;</h4>
-          <h5>NSW, AU | (+61) 000 000 0000 | email@email.com.au</h5>
+          <div class="contact">
+            <h4>Contact Information;</h4>
+            <h5>NSW, AU | (+61) 000 000 0000 | email@email.com.au</h5>
+          </div>
         </div>
     </body>
 
