Removed Bootstrap collapsible navbar infavour of one that functions through self written javascript

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,43 +8,35 @@
       <title>Willem Swanepoel Portfolio</title>
       <link rel="stylesheet" href="../style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <!-- Latest compiled and minified CSS -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-      <!-- jQuery library -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <!-- Popper JS -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-      <!-- Latest compiled JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
     <body>
       <header class="title"> 
         <h1 class="title-a">Portfolio</h1>
         <h6 class="title-b">by Willem Swanepoel</h6>
       </header>
-      <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <!-- Brand -->
-        <a class="navbar-brand" href="../index.html">Home</a>
-      
-        <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-          <div class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./past_work.html">Work History</a>
-            </li>
-            <li>
-              <a class="nav-link" href="./contact_me.html">Contact Me</a>
-            </li>
-          </ul>
+      <nav>
+        <div class="topnav" id="Topnav">
+          <a href="./about.html" class="active">About Me</a>
+          <!-- Navigation links (hidden by default) -->
+          <a href="../index.html">Home</a>
+          <a href="./past_work.html">Portfolio</a>
+          <a href="./contact_me.html">Contact</a>
+          <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
         </div>
+      <script>
+        /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+        function myFunction() {
+          var x = document.getElementById("Topnav");
+          if (x.className === "topnav") {
+            x.className += " responsive";
+          } else {
+            x.className = "topnav";
+          }
+        }
+      </script>
       </nav>
 
       <footer>
