--- a/index.html
+++ b/index.html
@@ -6,47 +6,40 @@
         <meta name="author" content="Willem Swan">
         <meta http-equiv="refresh" content="30">
         <title>Willem Swanepoel Portfolio</title>
+        <!-- Stlesheets -->
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <!-- Popper JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <!-- Latest compiled JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     </head>
     <body>
         <header class="title">
             <h1>Portfolio</h1>
             <h6>by Willem Swanepoel</h6>
         </header>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-          <!-- Brand -->
-          <a class="navbar-brand" href="./index.html">Portfolio</a>
-        
-          <!-- Toggler/collapsibe Button -->
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <!-- Navbar links -->
-          <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-            <div class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/past_work.html">Work History</a>
-              </li>
-              <li>
-                <a class="nav-link" href="./pages/contact_me.html">Contact Me</a>
-              </li>
-            </ul>
+        <nav>
+          <div class="topnav" id="Topnav">
+            <a href="./index.html" class="active">Home</a>
+            <!-- Navigation links (hidden by default) -->
+            <a href="./pages/past_work.html">Portfolio</a>
+            <a href="./pages/contact_me.html">Contact</a>
+            <a href="./pages/about.html">About</a>
+            <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+              <i class="fa fa-bars"></i>
+            </a>
           </div>
+        <script>
+          /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+          function myFunction() {
+            var x = document.getElementById("Topnav");
+            if (x.className === "topnav") {
+              x.className += " responsive";
+            } else {
+              x.className = "topnav";
+            }
+          }
+        </script>
         </nav>
-
       <div class="smallBio">
         <img src="img/Personal Picture.jpg" class="img1">
         <h3>Introduction</h3>
